headers/RadarKit/RKMisc.h

// Same as before but indexing in a cube-like coordinte, see rkutil -T1
char *RKGetBackgroundColorOfCubeIndex(const int);
//
// JSON (RadarKit 2)
//
// The following is a set of JSON functions that are *very* limited
// They are made for efficiency with many assumptions
//

// Extract a string into type, key, and vlaue
char *RKExtractJSON(char *ks, uint8_t *type, char *key, char *value);
// Get the value of a specific key
char *RKGetValueOfKey(const char *string, const char *key);
// Replace all values of a key
void RKReplaceAllValuesOfKey(char *string, const char *key, int value);
// Repalce enum of a key
void RKReplaceEnumOfKey(char *string, const char *key, int value);
// Revise logical values like "true" to true
void RKReviseLogicalValues(char *);
//
// JSON (RadarKit 3)
//
// The following is a set of JSON functions that are made to handle
// somewhat generic forms. More than previous verions but still a work
// in progress by Jan 2022. Will add functionality as the need arises
// Single quotes (') are used to denote the boundary of the char array
//

// Returns the pointer to the first non-space character of the input source
char *RKJSONSkipWhiteSpaces(const char *);
// Scan and copy a constituent until a delimiter
// Delimiter within double quotes, single quotes, or brackets are passed through
// The special combination \" within double quotes is passed through
// In the copy process, unnecessary empty spaces are eliminated, except those within quotes
char *RKJSONScanPassed(char *, const char *, const char);
// Get the current element of an array
char *RKJSONGetElement(char *, const char *);
// Extract a like '"key": "value"' string into key string and value string
// e.g., '"name": "startgate"' -> key = 'name' (no double quotes), value = '"stargate"'
char *RKJSONKeyValueFromElement(char *, char *, const char *);
// Scan a source to an element where the key == name and return the position in source as
// (char *) memories keyValue, key, and value must be provided to hold expected output
// The provided key name is case insensitive
// e.g., source: '{"tag": "shoe", "id": 123}', name = 'tag' produces
//       output: keyValue = '"tag": "show"', key = 'tag', value = '"shoe"'
// e.g., source: = {"tag": "shoe", "id": 123},
//       output: keyValue = '"id": 123', key = 'id', value = '123'
char *RKJSONGetValueOfKey(char *keyValueString, char *key, char *value, const char *name, const char *source);
//
//
//

// Returns a string of an unsigned long long with thousands separator
char *RKUIntegerToCommaStyleString(const unsigned long long);
// Returns a string of a long long with thousands separator
char *RKIntegerToCommaStyleString(const long long);
// Returns a string of hexadecimal representation
char *RKIntegerToHexStyleString(const long long);
// Returns a string of a double with thousands separator and 3 decimals
char *RKFloatToCommaStyleString(const double);
//
//
//

// Returns a time string now
char *RKNow(void);
// Computes the time difference between to struct timeval
double RKTimevalDiff(const struct timeval minuend, const struct timeval subtrahend);
// Computes the time difference between to struct timespec
double RKTimespecDiff(const struct timespec minuend, const struct timespec subtrahend);
// Gets the current UTC time in struct timespec
void RKUTCTime(struct timespec *);
//
//
//

bool RKFilenameExists(const char *);
void RKPreparePath(const char *);
long RKCountFilesInPath(const char *);
char *RKFolderOfFilename(const char *);
char *RKFileExtension(const char *);
char *RKLastPartOfPath(const char *);
char *RKLastTwoPartsOfPath(const char *);
char *RKLastNPartsOfPath(const char *, const int n);
char *RKPathStringByExpandingTilde(const char *);
void RKReplaceFileExtension(char *filename, const char *pattern, const char *replacement);
//
//
//

char *RKSignalString(const int);
//
//
//

int RKStripTail(char *);