python/radarkit/_ctypes_.py


# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 134
if _libs["radarkit"].has("RKGetBackgroundColorOfCubeIndex", "cdecl"):
    RKGetBackgroundColorOfCubeIndex = _libs["radarkit"].get("RKGetBackgroundColorOfCubeIndex", "cdecl")
    RKGetBackgroundColorOfCubeIndex.argtypes = [c_int]
    if sizeof(c_int) == sizeof(c_void_p):
        RKGetBackgroundColorOfCubeIndex.restype = ReturnString
    else:
        RKGetBackgroundColorOfCubeIndex.restype = String
        RKGetBackgroundColorOfCubeIndex.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 144
if _libs["radarkit"].has("RKExtractJSON", "cdecl"):
    RKExtractJSON = _libs["radarkit"].get("RKExtractJSON", "cdecl")
    RKExtractJSON.argtypes = [String, POINTER(uint8_t), String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKExtractJSON.restype = ReturnString
    else:
        RKExtractJSON.restype = String
        RKExtractJSON.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 147
if _libs["radarkit"].has("RKGetValueOfKey", "cdecl"):
    RKGetValueOfKey = _libs["radarkit"].get("RKGetValueOfKey", "cdecl")
    RKGetValueOfKey.argtypes = [String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKGetValueOfKey.restype = ReturnString
    else:
        RKGetValueOfKey.restype = String
        RKGetValueOfKey.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 150
if _libs["radarkit"].has("RKReplaceAllValuesOfKey", "cdecl"):
    RKReplaceAllValuesOfKey = _libs["radarkit"].get("RKReplaceAllValuesOfKey", "cdecl")
    RKReplaceAllValuesOfKey.argtypes = [String, String, c_int]
    RKReplaceAllValuesOfKey.restype = None

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 153
if _libs["radarkit"].has("RKReplaceEnumOfKey", "cdecl"):
    RKReplaceEnumOfKey = _libs["radarkit"].get("RKReplaceEnumOfKey", "cdecl")
    RKReplaceEnumOfKey.argtypes = [String, String, c_int]
    RKReplaceEnumOfKey.restype = None

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 156
if _libs["radarkit"].has("RKReviseLogicalValues", "cdecl"):
    RKReviseLogicalValues = _libs["radarkit"].get("RKReviseLogicalValues", "cdecl")
    RKReviseLogicalValues.argtypes = [String]
    RKReviseLogicalValues.restype = None

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 168
if _libs["radarkit"].has("RKJSONSkipWhiteSpaces", "cdecl"):
    RKJSONSkipWhiteSpaces = _libs["radarkit"].get("RKJSONSkipWhiteSpaces", "cdecl")
    RKJSONSkipWhiteSpaces.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKJSONSkipWhiteSpaces.restype = ReturnString
    else:
        RKJSONSkipWhiteSpaces.restype = String
        RKJSONSkipWhiteSpaces.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 174
if _libs["radarkit"].has("RKJSONScanPassed", "cdecl"):
    RKJSONScanPassed = _libs["radarkit"].get("RKJSONScanPassed", "cdecl")
    RKJSONScanPassed.argtypes = [String, String, c_char]
    if sizeof(c_int) == sizeof(c_void_p):
        RKJSONScanPassed.restype = ReturnString
    else:
        RKJSONScanPassed.restype = String
        RKJSONScanPassed.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 177
if _libs["radarkit"].has("RKJSONGetElement", "cdecl"):
    RKJSONGetElement = _libs["radarkit"].get("RKJSONGetElement", "cdecl")
    RKJSONGetElement.argtypes = [String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKJSONGetElement.restype = ReturnString
    else:
        RKJSONGetElement.restype = String
        RKJSONGetElement.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 181
if _libs["radarkit"].has("RKJSONKeyValueFromElement", "cdecl"):
    RKJSONKeyValueFromElement = _libs["radarkit"].get("RKJSONKeyValueFromElement", "cdecl")
    RKJSONKeyValueFromElement.argtypes = [String, String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKJSONKeyValueFromElement.restype = ReturnString
    else:
        RKJSONKeyValueFromElement.restype = String
        RKJSONKeyValueFromElement.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 190
if _libs["radarkit"].has("RKJSONGetValueOfKey", "cdecl"):
    RKJSONGetValueOfKey = _libs["radarkit"].get("RKJSONGetValueOfKey", "cdecl")
    RKJSONGetValueOfKey.argtypes = [String, String, String, String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKJSONGetValueOfKey.restype = ReturnString
    else:
        RKJSONGetValueOfKey.restype = String
        RKJSONGetValueOfKey.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 197
if _libs["radarkit"].has("RKUIntegerToCommaStyleString", "cdecl"):
    RKUIntegerToCommaStyleString = _libs["radarkit"].get("RKUIntegerToCommaStyleString", "cdecl")
    RKUIntegerToCommaStyleString.argtypes = [c_ulonglong]
    if sizeof(c_int) == sizeof(c_void_p):
        RKUIntegerToCommaStyleString.restype = ReturnString
    else:
        RKUIntegerToCommaStyleString.restype = String
        RKUIntegerToCommaStyleString.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 200
if _libs["radarkit"].has("RKIntegerToCommaStyleString", "cdecl"):
    RKIntegerToCommaStyleString = _libs["radarkit"].get("RKIntegerToCommaStyleString", "cdecl")
    RKIntegerToCommaStyleString.argtypes = [c_longlong]
    if sizeof(c_int) == sizeof(c_void_p):
        RKIntegerToCommaStyleString.restype = ReturnString
    else:
        RKIntegerToCommaStyleString.restype = String
        RKIntegerToCommaStyleString.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 203
if _libs["radarkit"].has("RKIntegerToHexStyleString", "cdecl"):
    RKIntegerToHexStyleString = _libs["radarkit"].get("RKIntegerToHexStyleString", "cdecl")
    RKIntegerToHexStyleString.argtypes = [c_longlong]
    if sizeof(c_int) == sizeof(c_void_p):
        RKIntegerToHexStyleString.restype = ReturnString
    else:
        RKIntegerToHexStyleString.restype = String
        RKIntegerToHexStyleString.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 206
if _libs["radarkit"].has("RKFloatToCommaStyleString", "cdecl"):
    RKFloatToCommaStyleString = _libs["radarkit"].get("RKFloatToCommaStyleString", "cdecl")
    RKFloatToCommaStyleString.argtypes = [c_double]
    if sizeof(c_int) == sizeof(c_void_p):
        RKFloatToCommaStyleString.restype = ReturnString
    else:
        RKFloatToCommaStyleString.restype = String
        RKFloatToCommaStyleString.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 213
if _libs["radarkit"].has("RKNow", "cdecl"):
    RKNow = _libs["radarkit"].get("RKNow", "cdecl")
    RKNow.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        RKNow.restype = ReturnString
    else:
        RKNow.restype = String
        RKNow.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 216
if _libs["radarkit"].has("RKTimevalDiff", "cdecl"):
    RKTimevalDiff = _libs["radarkit"].get("RKTimevalDiff", "cdecl")
    RKTimevalDiff.argtypes = [struct_timeval, struct_timeval]
    RKTimevalDiff.restype = c_double

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 219
if _libs["radarkit"].has("RKTimespecDiff", "cdecl"):
    RKTimespecDiff = _libs["radarkit"].get("RKTimespecDiff", "cdecl")
    RKTimespecDiff.argtypes = [struct_timespec, struct_timespec]
    RKTimespecDiff.restype = c_double

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 222
if _libs["radarkit"].has("RKUTCTime", "cdecl"):
    RKUTCTime = _libs["radarkit"].get("RKUTCTime", "cdecl")
    RKUTCTime.argtypes = [POINTER(struct_timespec)]
    RKUTCTime.restype = None

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 228
if _libs["radarkit"].has("RKFilenameExists", "cdecl"):
    RKFilenameExists = _libs["radarkit"].get("RKFilenameExists", "cdecl")
    RKFilenameExists.argtypes = [String]
    RKFilenameExists.restype = c_bool

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 229
if _libs["radarkit"].has("RKPreparePath", "cdecl"):
    RKPreparePath = _libs["radarkit"].get("RKPreparePath", "cdecl")
    RKPreparePath.argtypes = [String]
    RKPreparePath.restype = None

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 230
if _libs["radarkit"].has("RKCountFilesInPath", "cdecl"):
    RKCountFilesInPath = _libs["radarkit"].get("RKCountFilesInPath", "cdecl")
    RKCountFilesInPath.argtypes = [String]
    RKCountFilesInPath.restype = c_long

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 231
if _libs["radarkit"].has("RKFolderOfFilename", "cdecl"):
    RKFolderOfFilename = _libs["radarkit"].get("RKFolderOfFilename", "cdecl")
    RKFolderOfFilename.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKFolderOfFilename.restype = ReturnString
    else:
        RKFolderOfFilename.restype = String
        RKFolderOfFilename.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 232
if _libs["radarkit"].has("RKFileExtension", "cdecl"):
    RKFileExtension = _libs["radarkit"].get("RKFileExtension", "cdecl")
    RKFileExtension.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKFileExtension.restype = ReturnString
    else:
        RKFileExtension.restype = String
        RKFileExtension.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 233
if _libs["radarkit"].has("RKLastPartOfPath", "cdecl"):
    RKLastPartOfPath = _libs["radarkit"].get("RKLastPartOfPath", "cdecl")
    RKLastPartOfPath.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKLastPartOfPath.restype = ReturnString
    else:
        RKLastPartOfPath.restype = String
        RKLastPartOfPath.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 234
if _libs["radarkit"].has("RKLastTwoPartsOfPath", "cdecl"):
    RKLastTwoPartsOfPath = _libs["radarkit"].get("RKLastTwoPartsOfPath", "cdecl")
    RKLastTwoPartsOfPath.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKLastTwoPartsOfPath.restype = ReturnString
    else:
        RKLastTwoPartsOfPath.restype = String
        RKLastTwoPartsOfPath.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 235
if _libs["radarkit"].has("RKLastNPartsOfPath", "cdecl"):
    RKLastNPartsOfPath = _libs["radarkit"].get("RKLastNPartsOfPath", "cdecl")
    RKLastNPartsOfPath.argtypes = [String, c_int]
    if sizeof(c_int) == sizeof(c_void_p):
        RKLastNPartsOfPath.restype = ReturnString
    else:
        RKLastNPartsOfPath.restype = String
        RKLastNPartsOfPath.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 236
if _libs["radarkit"].has("RKPathStringByExpandingTilde", "cdecl"):
    RKPathStringByExpandingTilde = _libs["radarkit"].get("RKPathStringByExpandingTilde", "cdecl")
    RKPathStringByExpandingTilde.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKPathStringByExpandingTilde.restype = ReturnString
    else:
        RKPathStringByExpandingTilde.restype = String
        RKPathStringByExpandingTilde.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 237
if _libs["radarkit"].has("RKReplaceFileExtension", "cdecl"):
    RKReplaceFileExtension = _libs["radarkit"].get("RKReplaceFileExtension", "cdecl")
    RKReplaceFileExtension.argtypes = [String, String, String]
    RKReplaceFileExtension.restype = None

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 243
if _libs["radarkit"].has("RKSignalString", "cdecl"):
    RKSignalString = _libs["radarkit"].get("RKSignalString", "cdecl")
    RKSignalString.argtypes = [c_int]
    if sizeof(c_int) == sizeof(c_void_p):
        RKSignalString.restype = ReturnString
    else:
        RKSignalString.restype = String
        RKSignalString.errcheck = ReturnString

# /mnt/k/OU/RadarKit/headers/RadarKit/RKMisc.h: 249
if _libs["radarkit"].has("RKStripTail", "cdecl"):
    RKStripTail = _libs["radarkit"].get("RKStripTail", "cdecl")
    RKStripTail.argtypes = [String]
    RKStripTail.restype = c_int
